--- a/Optional Patches/MethaloxSSTU.cfg
+++ b/Optional Patches/MethaloxSSTU.cfg
@@ -1,6 +1,6 @@
 // Adds Methalox to MFT tanks
 
-SSTU_FUELTYPE:NEEDS[NearFutureLaunchVehicles]
+SSTU_FUELTYPE:NEEDS[NearFutureLaunchVehicles|SSTU]
 {
     name = Methalox
     RESOURCE
@@ -15,23 +15,23 @@ SSTU_FUELTYPE:NEEDS[NearFutureLaunchVehicles]
     }
 }    
 
-SSTU_RESOURCEVOLUME:NEEDS[NearFutureLaunchVehicles]
+SSTU_RESOURCEVOLUME:NEEDS[NearFutureLaunchVehicles|SSTU]
 {
 	name = LqdMethane
 	volume = 1.11594
 }
 
-SSTU_RESOURCEVOLUME:NEEDS[NearFutureLaunchVehicles]
+SSTU_RESOURCEVOLUME:NEEDS[NearFutureLaunchVehicles|SSTU]
 {
 	name = LqdOxygen
 	volume = 0.94377
 }
 
-@PART[SSTU-SC-TANK-MFT-A|SSTU-SC-TANK-MFT-S|SSTU-SC-TANK-MFT-R|SSTU-SC-TANK-MFT-LV|SSTU-SC-TANK-MUS|SSTU-SC-TANK-MFT-D]:FOR[SSTU]:NEEDS[NearFutureLaunchVehicles]
+@PART[SSTU-TANK-MFT-A|SSTU-TANK-MFT-S|SSTU-TANK-MFT-R|SSTU-TANK-MFT-LV|SSTU-TANK-MUS|SSTU-TANK-MFT-D]:FOR[SSTU]:NEEDS[NearFutureLaunchVehicles|SSTU]
 {
 	@MODULE[SSTUVolumeContainer]
 	{
-		@CONTAINER,0
+		@CONTAINER
 		{
 			resource = LqdOxygen
 			resource = LqdMethane
